alterações nas imagens : initial commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HELLO WORLD</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -18,10 +18,10 @@
       <!-- foto de perfil mais o @-->
       <div id="profile">
         <img
-          src="./assets/Avatar.png"
+          src="./assets/Avatargato.png"
           alt="Foto de Lucas Cardoso, usando camisa preta, barba e fundo"
         />
-        <p>@Hello World</p>
+        <p>@LuCard</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -30,7 +30,9 @@
       <!-- links-->
       <ul>
         <li>
-          <a href="https://github.com/" target="_blank"> Conheça meu GitHub </a>
+          <a href="https://github.com/LuCard-png?tab=projects" target="_blank">
+            Conheça meu GitHub
+          </a>
         </li>
 
         <li>
