--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <!-- script para adicionar o javascript-->
     <script src="./script.js"></script>
   </body>
 </html>
