--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     <div id="container">
       <!-- foto de perfil mais o @-->
       <div id="profile">
-        <img
-          src="./assets/Avatargato.png"
-          alt="Foto de Lucas Cardoso, usando camisa preta, barba e fundo"
-        />
-        <p>@LuCard</p>
+        <img src="./assets/avatar.png"alt="Foto de Lucas Cardoso, usando camisa preta, barba e fundo"/>
+        <p>Lucas Cardoso</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
