:projeto finalizado: initial commit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
 
         <li>
-          <a href="#" target="_blank">siga-me no Facebook</a>
+          <a href="https://www.facebook.com/profile.php?id=100009652450020&locale=pt_BR" target="_blank">siga-me no Facebook</a>
         </li>
       </ul>
       <!--icones das redes sociais-->
@@ -78,4 +78,5 @@
     <!-- script para adicionar o javascript-->
     <script src="./script.js"></script>
   </body>
+  
 </html>
