--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <!-- foto de perfil mais o @-->
       <div id="profile">
-        <img src="./assets/Avatar.png"alt="Foto de Lucas Cardoso, usando camisa preta, barba e fundo"/>
+        <img src="./assets/Avatar.png"alt="Foto de Lucas Cardoso, usando camisa preta, barba e fundo."/>
         <p>Lucas Cardoso</p>
       </div>
       <div id="switch" onclick="toggleMode()">
